--- a/index.html
+++ b/index.html
@@ -6,22 +6,49 @@
     <title>IT312 Guerba Website Development</title>
 
     <!-- WEBSITE ICON -->
-    <link rel="icon" href="../images/IC.png" />
-
-    <!-- EXTERNAL CSS -->
-    <link rel="stylesheet" href="../view/main.css" />
+    <link rel="icon" href="../assets/images/IC.png" />
 
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- BOOTSTRAP -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+    <!-- EXTERNAL CSS  -->
+    <link rel="stylesheet" type="text/css" href="../public/style/style.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" href="../public/style/main.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" href="../public/style/aboutMe.css">
+    <!-- END CODE EXTERNAL CSS -->
   </head>
   <body>
     <!-- MAIN  CONTENT -->
     <div id="main-content"></div>
+    <div id="aboutMe-content"></div>
 
     <script>
       // MAIN CONTENT
       $(document).ready(function () {
-        $("#main-content").load("../view/main.html");
+        // MAIN CONTENT
+        $("#main-content").load("../public/pages/main.html");
+        // ABOUT ME
+        $("#aboutMe-content").load("../public/pages/aboutMe.html");
       });
     </script>
   </body>
