--- a/public/pages/aboutMe.html
+++ b/public/pages/aboutMe.html
@@ -1,7 +1,33 @@
-<div class="container-fluid">
-  <div
-    class="container vh-100 d-grid justify-content-center align-items-center"
-  >
-    <h1 class="text-light"></h1>
+<div class="container-fluid mb-5" id="about-me">
+  <div class="container d-grid align-items-center mt-5">
+    <!-- HEAD TITLE -->
+    <div id="-head-title-about-me" class="d-flex justify-content-start">
+      <p class="text-info h1 fw-bold">ABOUT ME</p>
+    </div>
+
+    <!-- DETAILS -->
+    <div class="row">
+      <div class="col-12 col-md-5 justify-content-center mt-5">
+        <p class="h3 text-light" id="about-me-details">
+          Hi! I’m Dinno Guerba, a 3rd-year college student with a passion for
+          developing intuitive and user-friendly UI/UX designs. Ever since I was
+          introduced to the world of digital design, I’ve been fascinated by how
+          user experience and interface design can shape the way people interact
+          with technology.
+        </p>
+        <p class="h3 text-light" id="about-me-details">
+          Let’s create something amazing together!
+        </p>
+      </div>
+      <div
+        class="col-12 col-md-7 d-grid justify-content-center align-items-center"
+      >
+        <img
+          src="../assets/images/about-me.png"
+          alt="about-me-img"
+          class="img-fluid"
+        />
+      </div>
+    </div>
   </div>
 </div>
