--- a/public/pages/main.html
+++ b/public/pages/main.html
@@ -3,9 +3,7 @@
     <hr style="height: 10px; border: none" />
     <!-- MAIN -->
     <div class="main">
-      <p class="h1 text-center text-light fw-bold" id="head_title">
-        "Innovative Expressions"
-      </p>
+      <p class="h1 text-center" id="head_title">"Innovative Expressions"</p>
       <p class="h2 text-center text-light" id="sub-title">
         – Perfect for showcasing a range of creative or technical projects.
       </p>
@@ -16,32 +14,25 @@
       </p>
       <!-- HEAD ICONS -->
       <div class="head-icons d-flex justify-content-center align-items-center">
-        <a href="https://github.com/Lynxguerba" target="_blank">
-          <img
-            src="../assets/icons/icons8-github-96.png"
-            alt="head-icon-1"
-            class="img-fluid"
-            title="github/Lynxguerba"
-          />
+        <a href="https://github.com/Lynxguerba" target="_blank"
+          ><i class="bi bi-github fs-1" id="main-icon"></i>
         </a>
         <span style="width: 30px"></span>
         <a href="https://www.facebook.com/dinno.guerba.5" target="_blank">
-          <img
-            src="../assets/icons/icons8-facebook-100.png"
-            alt="head-icon-2"
-            class="img-fluid"
-            title="Facebook/Dinno Guerba"
-          />
+          <i class="bi bi-facebook fs-1" id="main-icon"></i>
         </a>
       </div>
     </div>
-    <button
+
+    <a
+      href="#about-me"
+      style="text-decoration: none"
       class="btn btn-outline-info d-flex justify-content-center"
       id="btn-info"
     >
       WORK WITH ME
       <span style="width: 10px"></span>
       <img src="../assets/icons/icons8-arrow-100.png" alt="arrow-right" />
-    </button>
+    </a>
   </div>
 </div>
