Commit changes file

--- a/public/pages/mission-vision.html
+++ b/public/pages/mission-vision.html
@@ -1,19 +1,24 @@
 <div class="container-fluid mt-5" style="background: #e0e0e0">
   <div class="container d-flex justify-content-center align-items-center">
-    <div class="row">
+    <div class="row w-100 justify-content-center">
       <hr style="height: 100px; border: none" />
       <!-- MISSION -->
-      <div class="col-12 col-md-6 d-grid mv" id="mission">
-        <!-- MISSION HEAD -->
-        <div class="d-flex">
+      <div
+        class="col-md-5 col-12 d-flex flex-column justify-content-between mv"
+        id="mission"
+      >
+        <div class="d-flex align-items-center">
           <img
             src="../assets/icons/icons8-target-64.png"
             alt="mission"
-            class="img-fuild"
+            class="img-fluid"
           />
-          <p class="h3 text-light">MISSION</p>
+          <p class="h3 text-light mb-0">MISSION</p>
         </div>
-        <p class="h5 text-light" style="font-family: 'Anaheim', sans-serif">
+        <p
+          class="h5 text-light mt-3"
+          style="font-family: 'Anaheim', sans-serif"
+        >
           "As a dedicated web developer and student, my mission is to leverage
           my skills and creativity to design and develop user-friendly,
           responsive, and innovative web solutions. I aim to continually learn
@@ -22,25 +27,21 @@
           contribute positively to the digital world."
         </p>
       </div>
-      <div style="width: 70px; height: 70px;"></div>
 
-      <!-- VISION -->
-      <div class="col-12 col-md-6 d-grid mv" id="vision">
-        <!-- VISION HEAD -->
-        <div class="d-flex">
+      <div style="width: 80px; height: 50px"></div>
+
+      <div class="col-md-5 col-12 d-flex flex-column mv" id="vision">
+        <div class="d-flex align-items-center">
           <img
             src="../assets/icons/icons8-vision-64.png"
             alt="vision"
-            class="img-fuild"
+            class="img-fluid"
           />
-          <p class="h3 text-light" style="height: 50px">VISION</p>
+          <p class="h3 text-light mb-0">VISION</p>
         </div>
         <p
-          class="h5 text-light"
-          style="
-            font-family: 'Anaheim', sans-serif;
-            transform: translateY(-32px);
-          "
+          class="h5 text-light mt-3"
+          style="font-family: 'Anaheim', sans-serif"
         >
           "My vision is to become a leading web developer recognized for
           excellence in design and functionality. I aspire to create impactful
