--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <link rel="stylesheet" href="../public/style/credentials.css" />
     <!-- ================= -->
     <link rel="stylesheet" href="../public/style/mission-vision.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" href="../public/style/project.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" href="../public/style/services.css" />
     <!-- END CODE EXTERNAL CSS -->
   </head>
   <body>
@@ -71,20 +75,10 @@
     <div id="aboutMe-page"></div>
     <div id="credentials-page"></div>
     <div id="mission-vision-page"></div>
+    <div id="project-page"></div>
+    <div id="services-page"></div>
 
-    <script>
-      // JQUERY
-      // MAIN CONTENT
-      $(document).ready(function () {
-        // MAIN CONTENT
-        $("#main-page").load("../public/pages/main.html");
-        // ABOUT ME
-        $("#aboutMe-page").load("../public/pages/aboutMe.html");
-        // CREDENTIALS
-        $("#credentials-page").load("../public/pages/credentials.html");
-        // MISSION VISION
-        $("#mission-vision-page").load("../public/pages/mission-vision.html");
-      });
-    </script>
+    <!-- JQUERY -->
+    <script src="../public/src/pages-jquery.js"></script>
   </body>
 </html>
