--- a/public/pages/main.html
+++ b/public/pages/main.html
@@ -25,7 +25,7 @@
     </div>
 
     <a
-      href="#about-me"
+      href="#"
       style="text-decoration: none"
       class="btn btn-outline-info d-flex justify-content-center"
       id="btn-info"
@@ -36,3 +36,4 @@
     </a>
   </div>
 </div>
+<script src="../public/src/main-jquery.js"></script>
