--- a/index.html
+++ b/index.html
@@ -56,20 +56,28 @@
     <!-- EXTERNAL CSS  -->
     <link rel="stylesheet" type="text/css" href="../public/style/style.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/main.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/main.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/aboutMe.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/aboutMe.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/credentials.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/credentials.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/mission-vision.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/mission-vision.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/project.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/project.css" />
     <!-- ================= -->
-    <link rel="stylesheet" href="../public/style/services.css" />
+    <link rel="stylesheet" type="text/css" href="../public/style/services.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" type="text/css" href="../public/style/project.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" type="text/css" href="../public/style/footer.css" />
+    <!-- ================= -->
+    <link rel="stylesheet" type="text/css" href="../public/style/reveal.css" />
     <!-- END CODE EXTERNAL CSS -->
   </head>
   <body>
+    <!-- BACKGROUND -->
+    <div id="background"></div>
     <!-- WEB PAGES -->
     <div id="main-page"></div>
     <div id="aboutMe-page"></div>
@@ -77,8 +85,11 @@
     <div id="mission-vision-page"></div>
     <div id="project-page"></div>
     <div id="services-page"></div>
+    <div id="footer-page"></div>
 
     <!-- JQUERY -->
     <script src="../public/src/pages-jquery.js"></script>
+    <!-- JAVASCRIPT -->
+    <script src="../public/src/script.js"></script>
   </body>
 </html>
