--- a/public/pages/aboutMe.html
+++ b/public/pages/aboutMe.html
@@ -1,12 +1,13 @@
 <div class="container-fluid mb-5" id="about-me">
+  <hr style="border: none; height: 50px" />
   <div class="container d-grid align-items-center mt-5">
     <!-- HEAD TITLE -->
-    <div id="-head-title-about-me" class="d-flex justify-content-start">
+    <div id="-head-title-about-me" class="d-flex justify-content-start reveal">
       <p class="text-info h1 fw-bold">ABOUT ME</p>
     </div>
 
     <!-- DETAILS -->
-    <div class="row">
+    <div class="row reveal">
       <div class="col-12 col-md-5 justify-content-center mt-5">
         <p class="h3 text-light" id="about-me-details">
           Hi! I’m Dinno Guerba, a 3rd-year college student with a passion for
@@ -20,7 +21,7 @@
         </p>
       </div>
       <div
-        class="col-12 col-md-7 d-grid justify-content-center align-items-center"
+        class="col-12 col-md-7 d-grid justify-content-center align-items-center reveal"
       >
         <img
           src="../assets/images/about-me.png"
