--- a/public/pages/credentials.html
+++ b/public/pages/credentials.html
@@ -2,14 +2,14 @@
 <div class="container-fluid mb-5">
   <div class="container d-grid align-items-center">
     <!-- HEAD TITLE -->
-    <div id="-head-title-about-me" class="d-flex justify-content-start mb-5">
+    <div id="-head-title-about-me" class="d-flex justify-content-start mb-5 reveal">
       <p class="text-info h1 fw-bold">CREDENTIALS</p>
     </div>
 
     <!-- DETAILS -->
     <div class="row">
       <div
-        class="col-12 col-md-6 d-grid justify-content-center"
+        class="col-12 col-md-6 d-grid justify-content-center reveal"
         id="credentails-img"
       >
         <img
@@ -18,7 +18,7 @@
           class="img-fluid"
         />
       </div>
-      <div class="col-12 col-md-6 d-grid justify-content-start">
+      <div class="col-12 col-md-6 d-grid justify-content-start reveal">
         <div class="d-flex row">
           <div class="educ-text col-12 col-md-6">
             <p class="h2 text-info" style="font-family: 'Exo 2', sans-serif">
