--- a/public/pages/main.html
+++ b/public/pages/main.html
@@ -15,11 +15,19 @@
       <!-- HEAD ICONS -->
       <div class="head-icons d-flex justify-content-center align-items-center">
         <a href="https://github.com/Lynxguerba" target="_blank"
-          ><i class="bi bi-github fs-1" id="main-icon"></i>
+          ><i
+            class="bi bi-github fs-1"
+            id="main-icon"
+            title="GITHUB\Lynxguerba"
+          ></i>
         </a>
         <span style="width: 30px"></span>
         <a href="https://www.facebook.com/dinno.guerba.5" target="_blank">
-          <i class="bi bi-facebook fs-1" id="main-icon"></i>
+          <i
+            class="bi bi-facebook fs-1"
+            id="main-icon"
+            title="Facebook\DinnoGuerba"
+          ></i>
         </a>
       </div>
     </div>
