--- a/public/pages/mission-vision.html
+++ b/public/pages/mission-vision.html
@@ -4,7 +4,7 @@
       <hr style="height: 100px; border: none" />
       <!-- MISSION -->
       <div
-        class="col-md-5 col-12 d-flex flex-column justify-content-between mv"
+        class="col-md-5 col-12 d-flex flex-column justify-content-between mv reveal"
         id="mission"
       >
         <div class="d-flex align-items-center">
@@ -29,8 +29,8 @@
       </div>
 
       <div style="width: 80px; height: 50px"></div>
-
-      <div class="col-md-5 col-12 d-flex flex-column mv" id="vision">
+      <!-- VISION -->
+      <div class="col-md-5 col-12 d-flex flex-column mv reveal" id="vision">
         <div class="d-flex align-items-center">
           <img
             src="../assets/icons/icons8-vision-64.png"
