--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -2,12 +2,15 @@
 <div class="contianer-fluid mb-5">
   <div class="container d-grid">
     <!-- HEAD TITLE -->
-    <div id="-head-title-about-me" class="d-flex justify-content-start mb-5">
+    <div
+      id="-head-title-about-me"
+      class="d-flex justify-content-start mb-5 reveal"
+    >
       <p class="text-info h1 fw-bold">MY WORK</p>
     </div>
 
     <!-- PROJECT 1 -->
-    <div class="row justify-content-center">
+    <div class="row justify-content-center reveal">
       <div
         class="col-md-6 col-12 d-grid align-items-center order-last order-md-first"
       >
@@ -42,14 +45,14 @@
 
     <hr style="border: none; height: 80px" />
     <!-- PROJECT 2 -->
-    <div class="row justify-content-center mt-5">
+    <div class="row justify-content-center mt-5 reveal">
       <div
         class="col-md-6 col-12 d-grid align-items-center order-last order-md-last"
       >
         <div>
           <p class="h3 Merriweather text-light fw-bold">Cloning Website</p>
           <p class="h3 Merriweather text-light">
-            ESDA Website that I re-design.
+            TESDA Website that I re-design.
           </p>
           <a
             href="https://lynxguerba.github.io/Tesda-Final_Project/"
@@ -74,7 +77,7 @@
 
     <hr style="border: none; height: 80px" />
     <!-- PROJECT 3 -->
-    <div class="row justify-content-center mt-5">
+    <div class="row justify-content-center mt-5 reveal">
       <div
         class="col-md-6 col-12 d-grid align-items-center order-last order-md-first"
       >
