--- a/public/pages/footer.html
+++ b/public/pages/footer.html
@@ -34,9 +34,9 @@
     </div>
     <div class="col-12 col-md-2"></div>
     <div class="col-12 col-md-5 d-flex justify-content-end">
-      <a href=""><i class="bi bi-telegram p-3" id="footer-icon"></i></a>
-      <a href=""><i class="bi bi-twitter p-3" id="footer-icon"></i></a>
-      <a href=""><i class="bi bi-youtube p-3" id="footer-icon"></i></a>
+      <a href="https://t.me/username/@GueLynx" target="_blank"><i class="bi bi-telegram p-3" id="footer-icon"></i></a>
+      <a href="https://x.com/DinnoGuerba" target="_blank"><i class="bi bi-twitter p-3" id="footer-icon"></i></a>
+      <a href="https://www.youtube.com/@guerbaDinno1215" target="_blank"><i class="bi bi-youtube p-3" id="footer-icon"></i></a>
     </div>
   </div>
 </div>
