--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>IT312 Guerba Website Development</title>
 
     <!-- WEBSITE ICON -->
-    <link rel="icon" href="../assets/images/IC.png" />
+    <link rel="icon" href="assets/images/IC.png" />
 
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -54,11 +54,11 @@
     />
 
     <!-- EXTERNAL CSS  -->
-    <link rel="stylesheet" type="text/css" href="../public/style/style.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/style.css" />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/main.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/main.css" />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/aboutMe.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/aboutMe.css" />
     <!-- ================= -->
     <link
       rel="stylesheet"
@@ -72,7 +72,7 @@
       href="../public/style/mission-vision.css"
     />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/project.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/project.css" />
     <!-- ================= -->
     <link
       rel="stylesheet"
@@ -80,11 +80,11 @@
       href="../public/style/services.css"
     />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/project.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/project.css" />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/footer.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/footer.css" />
     <!-- ================= -->
-    <link rel="stylesheet" type="text/css" href="../public/style/reveal.css" />
+    <link rel="stylesheet" type="text/css" href="public/style/reveal.css" />
     <!-- END CODE EXTERNAL CSS -->
   </head>
   <body>
@@ -615,6 +615,6 @@
     <!-- JQUERY -->
     <!-- <script src="../public/src/pages-jquery.js"></script> -->
     <!-- JAVASCRIPT -->
-    <script src="../public/src/script.js"></script>
+    <script src="public/src/script.js"></script>
   </body>
 </html>
