--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../public/style/credentials.css"
+      href="public/style/credentials.css"
     />
     <!-- ================= -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="../public/style/mission-vision.css"
+      href="public/style/mission-vision.css"
     />
     <!-- ================= -->
     <link rel="stylesheet" type="text/css" href="public/style/project.css" />
@@ -77,7 +77,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../public/style/services.css"
+      href="public/style/services.css"
     />
     <!-- ================= -->
     <link rel="stylesheet" type="text/css" href="public/style/project.css" />
@@ -164,11 +164,11 @@
           >
             WORK WITH ME
             <span style="width: 10px"></span>
-            <img src="../assets/icons/icons8-arrow-100.png" alt="arrow-right" />
+            <img src="assets/icons/icons8-arrow-100.png" alt="arrow-right" />
           </a>
         </div>
       </div>
-      <script src="../public/src/main-jquery.js"></script>
+      <script src="public/src/main-jquery.js"></script>
     </div>
 
     <!-- ABOUT ME PAGE -->
@@ -202,7 +202,7 @@
               class="col-12 col-md-7 d-grid justify-content-center align-items-center reveal"
             >
               <img
-                src="../assets/images/about-me.png"
+                src="assets/images/about-me.png"
                 alt="about-me-img"
                 class="img-fluid"
               />
@@ -232,7 +232,7 @@
               id="credentails-img"
             >
               <img
-                src="../assets/images/credentials.png"
+                src="assets/images/credentials.png"
                 alt="credentails"
                 class="img-fluid"
               />
@@ -299,7 +299,7 @@
             >
               <div class="d-flex align-items-center">
                 <img
-                  src="../assets/icons/icons8-target-64.png"
+                  src="assets/icons/icons8-target-64.png"
                   alt="mission"
                   class="img-fluid"
                 />
@@ -327,7 +327,7 @@
             >
               <div class="d-flex align-items-center">
                 <img
-                  src="../assets/icons/icons8-vision-64.png"
+                  src="assets/icons/icons8-vision-64.png"
                   alt="vision"
                   class="img-fluid"
                 />
@@ -390,7 +390,7 @@
               class="col-md-6 col-12 d-flex justify-content-center order-first order-md-last"
             >
               <img
-                src="../assets/images/project1.png"
+                src="assets/images/project1.png"
                 alt="img-project"
                 class="img-fluid"
               />
@@ -424,7 +424,7 @@
               class="col-md-6 col-12 d-flex justify-content-center align-items-center order-first order-md-first"
             >
               <img
-                src="../assets/images/project2.png"
+                src="assets/images/project2.png"
                 alt="img-project"
                 class="img-fluid"
               />
@@ -459,7 +459,7 @@
               class="col-md-6 col-12 d-flex justify-content-center align-items-center order-first order-md-last"
             >
               <img
-                src="../assets/images/project3.png"
+                src="assets/images/project3.png"
                 alt="img-project"
                 class="img-fluid"
               />
@@ -490,7 +490,7 @@
               >
                 <div class="card">
                   <div class="card-img">
-                    <img src="../assets/images/ui_ux.jpg" alt="service_img" />
+                    <img src="assets/images/ui_ux.jpg" alt="service_img" />
                   </div>
                   <div class="card-info">
                     <p class="fw-bold h6 Merriweather text-light">
@@ -512,7 +512,7 @@
                 <div class="card">
                   <div class="card-img">
                     <img
-                      src="../assets/images/web_develop.jpg"
+                      src="assets/images/web_develop.jpg"
                       alt="service_img"
                     />
                   </div>
@@ -535,7 +535,7 @@
                 <div class="card">
                   <div class="card-img">
                     <img
-                      src="../assets/images/software_develop.jpg"
+                      src="assets/images/software_develop.jpg"
                       alt="service_img"
                     />
                   </div>
@@ -583,7 +583,7 @@
                 Lets get in touch!
                 <span style="width: 10px"></span>
                 <img
-                  src="../assets/icons/icons8-arrow-right-64.png"
+                  src="assets/icons/icons8-arrow-right-64.png"
                   alt="arrow-right"
                   style="transform: scaleY(-1)"
                 />
