--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             </p>
             <div class="container d-flex justify-content-center">
               <a
-                href="mailto:dinnomguerba@gmail.com"
+                href="https://lynxguerba.github.io/Guerba-Login-Api/"
                 style="text-decoration: none"
                 class="btn btn-outline-info d-flex justify-content-center"
                 id="btn-info"
